2010-11-01  Kenichi Handa  <handa@m17n.org>

	* dispextern.h (lookup_glyphless_char_display): Extern it.

	* termhooks.h (struct terminal): New member charset_list.

	* coding.c (Fset_terminal_coding_system_internal): Set the
	`charset_list' member of struct terminal.

	* term.c (produce_glyphs): Handle the case it->what == IT_GLYPHLESS.
	(append_glyphless_glyph, produce_glyphless_glyph): New functions.

	* xdisp.c (lookup_glyphless_char_display): Make it non-static.
	(lookup_glyphless_char_display): Set it->what at the end.
	(last_glyphless_glyph_frame, last_glyphless_glyph_face_id)
	(last_glyphless_glyph_merged_face_id): Make them non-static.

	* w32term.c (x_draw_glyphless_glyph_string_foreground):
	Fix the arg with_background for font->driver->draw.

2010-11-01  Kenichi Handa  <handa@m17n.org>

	* w32gui.h (STORE_XCHAR2B, XCHAR2B_BYTE1, XCHAR2B_BYTE2):
	Surround chp by parentheses.

2010-11-01  Kenichi Handa  <handa@m17n.org>

	Implement various display methods for glyphless characters.

	* xdisp.c (Qglyphless_char, Vglyphless_char_display)
	(Qglyphless_char_display, Qhexa_code, Qempty_box, Qthin_space)
	(Qzero_width): New variables.
	(THIN_SPACE_WIDTH): New macro.
	(lookup_glyphless_char_display): New funciton.
	(last_glyphless_glyph_frame, last_glyphless_glyph_face_id)
	(last_glyphless_glyph_merged_face_id): New variables.
	(get_next_display_element): Check glyphless characters.
	(redisplay_internal): Initialize last_glyphless_glyph_frame and
	last_glyphless_glyph_face_id.
	(fill_glyphless_glyph_string): New function.
	(BUILD_GLYPHLESS_GLYPH_STRING): New macro.
	(BUILD_GLYPH_STRINGS): Handle the case GLYPHLESS_GLYPH.
	(append_glyphless_glyph, produce_glyphless_glyph): New functions.
	(x_produce_glyphs): If a suitable font is not found, produce a
	glyphless glyph.  Handle the case it->what == IT_GLYPHLESS.
	(syms_of_xdisp): Intern and staticpro Qglyphless_char,
	Qglyphless_char_display, Qhexa_code, Qempty_box, Qthin_space, and
	Qzero_width.